@@ -4,7 +4,7 @@ Gamesdir=$(datadir)/gnome/apps/Games
 
 INCLUDES = 			\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale"\" \
-	-I$(includedir) $(GNOME_INCLUDEDIR)
+	-I$(includedir) $(GNOME_INCLUDEDIR) $(GDK_PIXBUF_CFLAGS)
 
 bin_PROGRAMS = gnotski
 
@@ -15,6 +15,7 @@ gnotski_SOURCES =	\
 gnotski_LDADD = \
 	$(GNOME_LIBDIR)	\
 	$(GNOMEUI_LIBS)	\
+	$(GDK_PIXBUF_LIBS) \
 	$(INTLLIBS) 
 
 pixmap_DATA = gnotski.png gnotski-icon.png
