@@ -21,6 +21,7 @@
 #include <config.h>
 #include <gnome.h>
 #include <libgnomeui/gnome-window-icon.h>
+#include <gdk-pixbuf/gdk-pixbuf.h>
 #include "pieces.h"
 
 #define APPNAME "gnotski"
@@ -636,8 +637,8 @@ gint configure_space(GtkWidget *widget, GdkEventConfigure *event){
 }
 
 void create_space(){
-  gtk_widget_push_visual(gdk_imlib_get_visual());
-  gtk_widget_push_colormap(gdk_imlib_get_colormap());
+  gtk_widget_push_visual(gdk_rgb_get_visual ());
+  gtk_widget_push_colormap(gdk_rgb_get_cmap());
   space = gtk_drawing_area_new();
   gtk_widget_pop_colormap();
   gtk_widget_pop_visual();
@@ -685,21 +686,17 @@ void message(gchar *message){
 
 void load_image(){
   char *fname;
-  GdkImlibImage *image;
-  GdkVisual *visual;
+  GdkPixbuf *image;
 
   fname = gnome_unconditional_pixmap_file("gnotski.png");
   if(!g_file_exists(fname)) {
     g_print(_("Could not find \'%s\' pixmap file\n"), fname); exit(1);
   }
-  image = gdk_imlib_load_image(fname);
-  visual = gdk_imlib_get_visual();
-  if(visual->type != GDK_VISUAL_TRUE_COLOR) {
-    gdk_imlib_set_render_type(RT_PLAIN_PALETTE);
-  }
-  gdk_imlib_render(image, image->rgb_width, image->rgb_height);
-  tiles_pixmap = gdk_imlib_move_image(image);
-  gdk_imlib_destroy_image(image);
+  image = gdk_pixbuf_new_from_file(fname);
+
+  gdk_pixbuf_render_pixmap_and_mask (image, &tiles_pixmap, NULL, 127);
+
+  gdk_pixbuf_unref(image);
   g_free(fname);
 }
 
