@@ -1,3 +1,8 @@
+2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+        * gnotski.c: So long imlib, you was a good friend but we don't
+          like you any more, sorry.
+
 2001-06-24  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
 	From Dean Scott <drscott@rochester.rr.com>.
